/*
 * protobuffer definition of all basic type arrays
 * @(#)$Id: bsctype_array.pro
 */

syntax = "proto3";
//option optimize_for = CODE_SIZE;

package zrpc_pbf;

message basictype_array
{
	repeated bool boolean_array = 1;
	repeated int32 int32_array = 2;
	repeated int64 int64_array = 3;
	repeated uint32 uint32_array = 4;
	repeated uint64 uint64_array = 5;
	repeated double double_array = 6;
	repeated bytes bytes_array = 7;
	repeated string string_array = 8;
	repeated int32 enum_array = 9;
	repeated int64 interface_array = 10;
}

/* EOF */
